--- a/landing-page.html
+++ b/landing-page.html
@@ -9,7 +9,7 @@ permalink: /landing-page/
 		<div class="row">
 			<div class="col-sm-3 col-xs-12">
 				<div id="logo">
-					<a href="/"><img src="/img/bonaval-logo.png"></a>
+					<a href="/"><img src="{{site.baseurl}}/img/bonaval-logo.png"></a>
 				</div><!--end of logo -->
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-4 col-xs-12 page-links">
@@ -26,7 +26,7 @@ permalink: /landing-page/
 <div id="banner-wrap">
 	<div class="container">
 		<div class="row">
-			<img src="/img/siegel.png" id="guarantee-img">
+			<img src="{{site.baseurl}}/img/siegel.png" id="guarantee-img">
 			<h1 class="text-center">Schnelles Bargeld?</h1>
 			<h2 class="text-center">Bei uns finden Sie Top Angebote.<br></h2>
 		</div>
@@ -62,7 +62,7 @@ permalink: /landing-page/
 
 			<div class="col-sm-3 col-xs-12 inner-benefits-wrap">
 				<div class="image-wrap">
-					<img src="/img/step-icon1.png">
+					<img src="{{site.baseurl}}/img/step-icon1.png">
 				</div>
 				<div class="benefits-description">
 					<span>Step 1</span>
@@ -71,12 +71,12 @@ permalink: /landing-page/
 			</div>
 
 			<div class="col-sm-1 col-xs-12 inner-benefits-wrap">
-				<img src="/img/right-arrow.png" class="right-arrow">
+				<img src="{{site.baseurl}}/img/right-arrow.png" class="right-arrow">
 			</div>
 
 			<div class="col-sm-3 col-xs-12 inner-benefits-wrap">
 				<div class="image-wrap">
-					<img src="/img/step-icon2.png">
+					<img src="{{site.baseurl}}/img/step-icon2.png">
 				</div>
 				<div class="benefits-description">
 					<span>Step 2</span>
@@ -85,12 +85,12 @@ permalink: /landing-page/
 			</div>
 
 			<div class="col-sm-1 col-xs-12 inner-benefits-wrap">
-				<img src="/img/right-arrow.png" class="right-arrow">
+				<img src="{{site.baseurl}}/img/right-arrow.png" class="right-arrow">
 			</div>
 
 			<div class="col-sm-3 col-xs-12 inner-benefits-wrap">
 				<div class="image-wrap">
-					<img src="/img/step-icon3.png">
+					<img src="{{site.baseurl}}/img/step-icon3.png">
 				</div>
 				<div class="benefits-description">
 					<span>Step 3</span>
@@ -109,12 +109,12 @@ permalink: /landing-page/
 			<div class="row">
 				<div class="col-sm-4 col-xs-12">
 					<div class="benefits-inner-wrap text-center">
-						<img src="/img/condition-icon.png">
+						<img src="{{site.baseurl}}/img/condition-icon.png">
 						<h4>Top Konditionen</h4>
 						<p>durch deutschlandweiten Vergleich</p>
 					</div>
 					<div class="benefits-inner-wrap text-center">
-						<img src="/img/risk-free-icon.png">
+						<img src="{{site.baseurl}}/img/risk-free-icon.png">
 						<h4>Ohne Risiko</h4>
 						<p>gesetzliche Regulierung der Pfandleihe</p>
 					</div>
@@ -122,7 +122,7 @@ permalink: /landing-page/
 				<div class="col-sm-4 col-xs-12">
 					<div class="benefits-inner-wrap text-center">
 						<div id="benefits-mid-section">
-							<img src="/img/cash-icon.png">
+							<img src="{{site.baseurl}}/img/cash-icon.png">
 							<h4>Schnelles Bargeld</h4>
 							<p>noch am gleichen Tag</p>
 						</div>
@@ -130,12 +130,12 @@ permalink: /landing-page/
 				</div>
 				<div class="col-sm-4 col-xs-12">
 					<div class="benefits-inner-wrap text-center">
-						<img src="/img/discreet.png">
+						<img src="{{site.baseurl}}/img/discreet.png">
 						<h4>Diskret</h4>
 						<p>Keine Namenseingabe oder Bonitätsprüfung</p>
 					</div>
 					<div class="benefits-inner-wrap text-center">
-						<img src="/img/free-icon.png">
+						<img src="{{site.baseurl}}/img/free-icon.png">
 						<h4>Kostenlos</h4>
 						<p>und unverbindlich</p>
 					</div>
@@ -156,7 +156,7 @@ permalink: /landing-page/
 				<div class="loans-wrap-inner">
 					<h4>Fiat Punto</h4>
 					<span class="description">AUTO</span>
-					<img src="/img/punto.png">
+					<img src="{{site.baseurl}}/img/punto.png">
 					<span class="price">12.500 &euro;</span>
 					<a href="">JETZT VERGLEICHEN <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
 				</div>
@@ -165,7 +165,7 @@ permalink: /landing-page/
 				<div class="loans-wrap-inner">
 					<h4>Citizen Night</h4>
 					<span class="description">WATCH</span>
-					<img src="/img/punto.png">
+					<img src="{{site.baseurl}}/img/punto.png">
 					<span class="price">12.500 &euro;</span>
 					<a href="">JETZT VERGLEICHEN <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
 				</div>
@@ -174,7 +174,7 @@ permalink: /landing-page/
 				<div class="loans-wrap-inner">
 					<h4>Fiat Punto</h4>
 					<span class="description">AUTO</span>
-					<img src="/img/punto.png">
+					<img src="{{site.baseurl}}/img/punto.png">
 					<span class="price">12.500 &euro;</span>
 					<a href="">JETZT VERGLEICHEN <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
 				</div>
@@ -183,7 +183,7 @@ permalink: /landing-page/
 				<div class="loans-wrap-inner">
 					<h4>Fiat Punto</h4>
 					<span class="description">AUTO</span>
-					<img src="/img/punto.png">
+					<img src="{{site.baseurl}}/img/punto.png">
 					<span class="price">12.500 &euro;</span>
 					<a href="">JETZT VERGLEICHEN <i class="fa fa-chevron-right" aria-hidden="true"></i></a>
 				</div>
@@ -202,7 +202,7 @@ permalink: /landing-page/
 			<div class="col-sm-4 col-xs-12 text-center">
 				<div class="gets-inner-wrap">
 					<div class="image-wrap">
-						<img src="/img/icon1.png">
+						<img src="{{site.baseurl}}/img/icon1.png">
 					</div>
 					<span class="steps">STEP 1</span>
 					<h3>Anfrage bei<br>BonaVal stellen</h3>
@@ -213,7 +213,7 @@ permalink: /landing-page/
 			<div class="col-sm-4 col-xs-12 text-center">
 				<div class="gets-inner-wrap">
 					<div class="image-wrap">
-						<img src="/img/icon2.png">
+						<img src="{{site.baseurl}}/img/icon2.png">
 					</div>
 					<span class="steps">STEP 2</span>
 					<h3>Vergleichen &<br>unverbindlich reservieren</h3>
@@ -224,7 +224,7 @@ permalink: /landing-page/
 			<div class="col-sm-4 col-xs-12 text-center">
 				<div class="gets-inner-wrap">
 					<div class="image-wrap">
-						<img src="/img/icon3.png">
+						<img src="{{site.baseurl}}/img/icon3.png">
 					</div>
 					<span class="steps">STEP 3</span>
 					<h3>Gegenstand abgeben &<br>Bargeld erhalten</h3>
@@ -248,7 +248,7 @@ permalink: /landing-page/
 				</ul>
 			</div>
 			<div class="col-sm-6 col-xs-12 offer-right-block">
-				<img src="/img/responsive.png">	
+				<img src="{{site.baseurl}}/img/responsive.png">	
 			</div>
 		</div>
 	</div>
@@ -263,19 +263,19 @@ permalink: /landing-page/
 			<ul class="bxslider">
 			  <li><!-- content for first slide -->
 			  	<div class="testimonial-wrap text-center">
-			  		<img src="/img/author1.png" class="center-block img-responsive">
+			  		<img src="{{site.baseurl}}/img/author1.png" class="center-block img-responsive">
 			  		<p>BonaVal war sehr einfach zu benutzen. Ich habe<br>meine Angebote innerhalb weniger Stunden<br>bekommen, zusammen mit einfachen<br>Erklärungen wie ich an das Geld gelange.</p>
 			  		<span class="author-name">Gisela</span>
 			  		<span class="author-company">SCHWABING/MÜNCHEN</span>
 			  	</div>
 			  	<div class="testimonial-wrap text-center">
-			  		<img src="/img/author2.png" class="center-block img-responsive">
+			  		<img src="{{site.baseurl}}/img/author2.png" class="center-block img-responsive">
 			  		<p>“Als ein Großkunde meines Malerbetriebs seine<br>Rechnung nicht bezahlte, half mir BonaVal schnell und<br> unkompliziert Bargeld für mein Zweitauto zu erhalten.<br>Damit konnte ich meine Mitarbeiter bezahlen.”</p>
 			  		<span class="author-name">Thomas</span>
 			  		<span class="author-company">BREMEN</span>
 			  	</div>
 			  	<div class="testimonial-wrap text-center">
-			  		<img src="/img/author3.png" class="center-block img-responsive">
+			  		<img src="{{site.baseurl}}/img/author3.png" class="center-block img-responsive">
 			  		<p>“As a major customer of my Malerbetriebs his bill<br>is not paid, helped me Bonaval quickly and easily<br> cash for my second car to get. So that I could<br>pay my employees.”</p>
 			  		<span class="author-name">Jordan</span>
 			  		<span class="author-company">BREMEN</span>
@@ -285,19 +285,19 @@ permalink: /landing-page/
 
 			  	<li><!-- content for second slide -->
 			  	<div class="testimonial-wrap text-center">
-			  		<img src="/img/author1.png" class="center-block img-responsive">
+			  		<img src="{{site.baseurl}}/img/author1.png" class="center-block img-responsive">
 			  		<p>BonaVal war sehr einfach zu benutzen. Ich habe<br>meine Angebote innerhalb weniger Stunden<br>bekommen, zusammen mit einfachen<br>Erklärungen wie ich an das Geld gelange.</p>
 			  		<span class="author-name">Gisela</span>
 			  		<span class="author-company">SCHWABING/MÜNCHEN</span>
 			  	</div>
 			  	<div class="testimonial-wrap text-center">
-			  		<img src="/img/author2.png" class="center-block img-responsive">
+			  		<img src="{{site.baseurl}}/img/author2.png" class="center-block img-responsive">
 			  		<p>“Als ein Großkunde meines Malerbetriebs seine<br>Rechnung nicht bezahlte, half mir BonaVal schnell und<br>unkompliziert Bargeld für mein Zweitauto zu erhalten.<br>Damit konnte ich meine Mitarbeiter bezahlen.”</p>
 			  		<span class="author-name">Thomas</span>
 			  		<span class="author-company">BREMEN</span>
 			  	</div>
 			  	<div class="testimonial-wrap text-center">
-			  		<img src="/img/author3.png" class="center-block img-responsive">
+			  		<img src="{{site.baseurl}}/img/author3.png" class="center-block img-responsive">
 			  		<p>“As a major customer of my Malerbetriebs his bill<br>is not paid, helped me Bonaval quickly and easily<br>cash for my second car to get. So that I could<br>pay my employees.”</p>
 			  		<span class="author-name">Jordan</span>
 			  		<span class="author-company">BREMEN/span>
@@ -306,19 +306,19 @@ permalink: /landing-page/
 
 			  	<li><!-- content for third slide -->
 			  	<div class="testimonial-wrap text-center">
-			  		<img src="/img/author1.png" class="center-block img-responsive">
+			  		<img src="{{site.baseurl}}/img/author1.png" class="center-block img-responsive">
 			  		<p>BonaVal war sehr einfach zu benutzen. Ich habe<br>meine Angebote innerhalb weniger Stunden<br>bekommen, zusammen mit einfachen<br>Erklärungen wie ich an das Geld gelange.</p>
 			  		<span class="author-name">Gisela</span>
 			  		<span class="author-company">SCHWABING/MÜNCHEN</span>
 			  	</div>
 			  	<div class="testimonial-wrap text-center">
-			  		<img src="/img/author2.png" class="center-block img-responsive">
+			  		<img src="{{site.baseurl}}/img/author2.png" class="center-block img-responsive">
 			  		<p>“Als ein Großkunde meines Malerbetriebs seine<br>Rechnung nicht bezahlte, half mir BonaVal schnell und<br> unkompliziert Bargeld für mein Zweitauto zu erhalten.<br>Damit konnte ich meine Mitarbeiter bezahlen.”</p>
 			  		<span class="author-name">Thomas</span>
 			  		<span class="author-company">BREMEN</span>
 			  	</div>
 			  	<div class="testimonial-wrap text-center">
-			  		<img src="/img/author3.png" class="center-block img-responsive">
+			  		<img src="{{site.baseurl}}/img/author3.png" class="center-block img-responsive">
 			  		<p>“As a major customer of my Malerbetriebs his bill<br>is not paid, helped me Bonaval quickly and easily<br>cash for my second car to get. So that I could<br>pay my employees.”</p>
 			  		<span class="author-name">Jordan</span>
 			  		<span class="author-company">BREMEN/span>
@@ -343,7 +343,7 @@ permalink: /landing-page/
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4 col-xs-12 footer-left-block">
-				<img src="/img/bonaval-logo.png">
+				<img src="{{site.baseurl}}/img/bonaval-logo.png">
 				<div id="reach-us">
 					<span id="email">info@bonaval.de</span>
 					<span id="number"><i class="fa fa-whatsapp" aria-hidden="true"></i>089/21 806 763</span>
