--- a/landing-page.html
+++ b/landing-page.html
@@ -7,17 +7,31 @@ permalink: /landing-page/
 <div id="head-wrap">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-3 col-xs-12">
+			<div class="col-sm-3 col-xs-6">
 				<div id="logo">
 					<a href="/"><img src="{{site.baseurl}}/img/bonaval-logo.png"></a>
 				</div><!--end of logo -->
 			</div>
-			<div class="col-sm-6 col-md-6 col-lg-4 col-xs-12 page-links">
-				<ul>
+			<div class="col-sm-6 col-md-6 col-lg-4 col-xs-6 page-links">
+		      <nav class="navbar navbar-default" role="navigation">
+		        <!-- Brand and toggle get grouped for better mobile display -->
+		        <div class="navbar-header">
+		          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		          </button>
+		        </div>
+		        <!-- Collect the nav links, forms, and other content for toggling -->
+		        <div class="collapse navbar-collapse" id="jb-navbar-collapse">
+		          <ul class="nav navbar-nav">
 					<li><a href="#">Kredit</a></li>
 					<li><a href="#">Verkauf</a></li>
 					<li><a href="#" id="login-btn">Login</a></li>
-				</ul>
+		          </ul>
+		        </div><!-- /.navbar-collapse -->
+		      </nav>
 			</div><!-- end of page-links -->
 		</div>
 	</div>
