--- a/landing-page.html
+++ b/landing-page.html
@@ -38,7 +38,8 @@ permalink: /landing-page/
 </div><!-- end of head-wrap -->
 
 <div id="banner-wrap">
-	<div class="container">
+	<div id="banner-overlay">
+	<div class="container banner-wrap-iner">
 		<div class="row">
 			<img src="{{site.baseurl}}/img/siegel.png" id="guarantee-img">
 			<h1 class="text-center">Schnelles Bargeld?</h1>
@@ -68,6 +69,7 @@ permalink: /landing-page/
 			</div>
 		</div>
 	</div><!-- end of overlay -->
+</div>
 </div><!-- end of banner-wrap -->
 
 <div id="benefits-wrap">
