--- a/landing-page.html
+++ b/landing-page.html
@@ -123,7 +123,18 @@ permalink: /landing-page/
 				<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque finibus placerat dapibus. Quisque eget nibh<br>nec risus hendrerit malesuada a quis orci.</p>
 			</div>
 			<div class="row">
-				<div class="col-sm-4 col-xs-12">
+
+				<div class="col-sm-4 col-sm-push-4 col-xs-12 ">
+					<div class="benefits-inner-wrap text-center">
+						<div id="benefits-mid-section">
+							<img src="{{site.baseurl}}/img/cash-icon.png">
+							<h4>Schnelles Bargeld</h4>
+							<p>noch am gleichen Tag</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-4  col-sm-pull-4 col-xs-6">
 					<div class="benefits-inner-wrap text-center">
 						<img src="{{site.baseurl}}/img/condition-icon.png">
 						<h4>Top Konditionen</h4>
@@ -135,16 +146,8 @@ permalink: /landing-page/
 						<p>gesetzliche Regulierung der Pfandleihe</p>
 					</div>
 				</div>
-				<div class="col-sm-4 col-xs-12">
-					<div class="benefits-inner-wrap text-center">
-						<div id="benefits-mid-section">
-							<img src="{{site.baseurl}}/img/cash-icon.png">
-							<h4>Schnelles Bargeld</h4>
-							<p>noch am gleichen Tag</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-4 col-xs-12">
+
+				<div class="col-sm-4 col-xs-6">
 					<div class="benefits-inner-wrap text-center">
 						<img src="{{site.baseurl}}/img/discreet.png">
 						<h4>Diskret</h4>
@@ -301,15 +304,6 @@ permalink: /landing-page/
 			  		<span class="author-company">BREMEN</span>
 			  	</div>
 			  </li>
-
-			  <li>
-			  	<div class="testimonial-wrap text-center">
-			  		<img src="{{site.baseurl}}/img/author1.png" class="center-block img-responsive">
-			  		<p>BonaVal war sehr einfach zu benutzen. Ich habe<br>meine Angebote innerhalb weniger Stunden<br>bekommen, zusammen mit einfachen<br>Erklärungen wie ich an das Geld gelange.</p>
-			  		<span class="author-name">Gisela</span>
-			  		<span class="author-company">SCHWABING/MÜNCHEN</span>
-			  	</div>
-			  	</li>
 			</ul>
 		</div>
 	</div>
