Tweaks in slider

--- a/landing-page.html
+++ b/landing-page.html
@@ -279,7 +279,8 @@ permalink: /landing-page/
 			<h3 class="text-center">Das sagen unsere Kunden</h3>
 		</div>
 		<div class="row">
-			<ul class="bxslider">
+			<div class="flexslider">
+			<ul class="slides">
 			  <li>
 			  	<div class="testimonial-wrap text-center">
 			  		<img src="{{site.baseurl}}/img/author1.png" class="center-block img-responsive">
@@ -305,6 +306,7 @@ permalink: /landing-page/
 			  	</div>
 			  </li>
 			</ul>
+		</div>
 		</div>
 	</div>
 </div><!-- end of client-testimonial -->
