added footer links

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -341,32 +341,32 @@ permalink: /landing-page-2/
 				<div class="col-sm-3 col-xs-12">
 					<h4>UNTERNEHMEN</h4>
 					<ul>
-						<li>Über uns</li>
-						<li>Nutzungsbedingungen</li>
-						<li>Datenschutz</li>
-						<li>Impressum</li>
+						<li><a href="/infos/UeberUns">Über uns</a></li>
+						<li><a href="/infos/AGB/">Nutzungsbedingungen</a></li>
+						<li><a href="/infos/Datenschutz/">Datenschutz</a></li>
+						<li><a href="/infos/Impressum/">Impressum</a></li>
 					</ul>
 				</div>
 				<div class="col-sm-3 col-xs-12">
 					<h4>KREDITNEHMER</h4>
 					<ul>
-						<li>Kreditvergleich einholen</li>
-						<li>Kreditgeber kennenlernen</li>
-						<li>FAQ</li>
-						<li>Pfandleihverordnung</li>
-						<li>Einloggen</li>
+						<li><a href="https://www.bonaval.de/app/input/new">Kreditvergleich einholen</a></li>
+						<li><a href="https://www.bonaval.de/app/locations/">Kreditgeber kennenlernen</a></li>
+						<li><a href="/infos/FAQ/">FAQ</a></li>
+						<li><a href="/infos/Pfandleihverordnung/">Pfandleihverordnung</a></li>
+						<li><a href="https://www.bonaval.de/app/user/login">Einloggen</a></li>
 					</ul>
 				</div>
 				<div class="col-sm-3 col-xs-12">
 					<h4>KREDITGEBER</h4>
 					<ul>
-						<li>Partnerprogramm</li>
-						<li>Einloggen</li>
+						<li><a href="/infos/Partnerprogramm/">Partnerprogramm</a></li>
+						<li><a href="https://www.bonaval.de/app/user/login">Einloggen</a></li>
 					</ul>
 				</div>
 				<div class="col-sm-3 col-xs-12 social-links">
-					<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+					<a href="https://twitter.com/bonaval_de" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+					<a href="https://www.facebook.com/BonaVal-132134887141004" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 				</div>
 				<div class="col-sm-12 col-xs-12 copyright">
 					<p>BonaVal ist eine Marke der BonaVal UG · Schellingstraße 9 · 80799 München · info@bonaval.de <br>BonaVal vergibt keine Pfandkredite, BonaVal ist lediglich eine unabhängige Vergleichsseite für Pfandkredite.<br>© 2016 BonaVal UG, München. Alle Inhalte unterliegen unserem Copyright</p>
