added map and placeholder for meta tags

--- a/landing-page.html
+++ b/landing-page.html
@@ -39,37 +39,34 @@ permalink: /landing-page/
 
 <div id="banner-wrap">
 	<div id="banner-overlay">
-	<div class="container banner-wrap-iner">
-		<div class="row">
-			<img src="{{site.baseurl}}/img/siegel.png" id="guarantee-img">
-			<h1 class="text-center">Schnelles Bargeld?</h1>
-			<h2 class="text-center">Bei uns finden Sie Top Angebote.<br></h2>
-		</div>
-	</div>
-	<div id="overlay">
-		<div class="container">
-			<div class="row text-center">
-				<h2 class="text-center">Kostenlos und schnell.</h2>
-				<div id="form-wrapper">
-					<form method="POST" action="#">
-						<select>
-							<option value="Wertgegenstand">Mein Wertgegenstand</option>
-							<option value="Wertgegenstand">Mein Wertgegenstand</option>
-						</select>
-						<input type="submit" value="JETZT VERGLEICHEN" name="submit">
-						<div id="radio-wrap">
-							<input type="radio" name="compare" value="Verkaufsangebote" id="r1" checked>
-							<label for="r1"></label>Verkaufsangebote
-
-		  					<input type="radio" name="compare" value="Kreditangebote" id="r2"> 
-		  					<label for="r2"></label>Kreditangebote
-	  					</div>
-					</form>
-				</div>
+		<div class="container banner-wrap-iner">
+			<div class="row">
+				<img src="{{site.baseurl}}/img/siegel.png" id="guarantee-img">
+				<h1 class="text-center">Schnelles Bargeld?</h1>
+				<h2 class="text-center">Bei uns finden Sie Top Angebote.<br>Kostenlos und schnell.</h2>
 			</div>
 		</div>
-	</div><!-- end of overlay -->
-</div>
+		<div class="container">
+			<div class="row text-center">
+				<div id="form-wrapper">
+						<form method="POST" action="#">
+							<select>
+								<option value="Wertgegenstand">Mein Wertgegenstand</option>
+								<option value="Wertgegenstand">Mein Wertgegenstand</option>
+							</select>
+							<input type="submit" value="JETZT VERGLEICHEN" name="submit">
+							<div id="radio-wrap">
+								<input type="radio" name="compare" value="Verkaufsangebote" id="r1" checked>
+								<label for="r1"></label>Verkaufsangebote
+
+			  					<input type="radio" name="compare" value="Kreditangebote" id="r2"> 
+			  					<label for="r2"></label>Kreditangebote
+		  					</div>
+						</form>
+					</div>
+			</div>
+		</div>
+	</div><!-- end of banner-overlay -->
 </div><!-- end of banner-wrap -->
 
 <div id="benefits-wrap">
