added map and placeholder for meta tags

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -5,75 +5,71 @@ metaDescription: Description goes here
 permalink: /landing-page-2/
 ---
 <div id="banner-wrap" class="lp2-banner-wrap">
-<div id="banner-overlay">
-<div id="head-wrap">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-3 col-xs-6">
-				<div id="logo">
-					<a href="/"><img src="{{site.baseurl}}/img/bonaval-logo.png"></a>
-				</div><!--end of logo -->
-			</div>
-			<div class="col-sm-6 col-md-6 col-lg-4 col-xs-6 page-links">
-		      <nav class="navbar navbar-default" role="navigation">
-		        <!-- Brand and toggle get grouped for better mobile display -->
-		        <div class="navbar-header">
-		          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
-		            <span class="sr-only">Toggle navigation</span>
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-		          </button>
-		        </div>
-		        <!-- Collect the nav links, forms, and other content for toggling -->
-		        <div class="collapse navbar-collapse" id="jb-navbar-collapse">
-		          <ul class="nav navbar-nav">
-					<li><a href="#">Kredit</a></li>
-					<li><a href="#">Verkauf</a></li>
-					<li><a href="#" id="login-btn">Login</a></li>
-		          </ul>
-		        </div><!-- /.navbar-collapse -->
-		      </nav>
-			</div><!-- end of page-links -->
-		</div>
-	</div>
-</div><!-- end of head-wrap -->
-
-	<div class="container">
-		<div class="row">
-			<h1 class="text-center" id="top-heading">auxmoney</h1>
-			<h2 class="text-center">Bei uns finden Sie Top Angebote.<br></h2>
-		</div>
-	</div>
-
-	<div id="overlay">
-		<div class="container">
-			<div class="row text-center">
-				<h2 class="text-center">Kostenlos und schnell.</h2>
-				<div id="form-wrapper">
-					<form method="POST" action="#">
-						<select>
-							<option value="Wertgegenstand">Mein Wertgegenstand</option>
-							<option value="Wertgegenstand">Mein Wertgegenstand</option>
-						</select>
-						<input type="submit" value="JETZT VERGLEICHEN" name="submit">
-						<div id="radio-wrap">
-							<input type="radio" name="compare" value="Verkaufsangebote" id="r1" checked>
-							<label for="r1"></label>Verkaufsangebote
-
-		  					<input type="radio" name="compare" value="Kreditangebote" id="r2"> 
-		  					<label for="r2"></label>Kreditangebote
-	  					</div>
-					</form>
+	<div id="banner-overlay">
+		<div id="head-wrap">
+			<div class="container">
+				<div class="row">
+					<div class="col-sm-3 col-xs-6">
+						<div id="logo">
+							<a href="/"><img src="{{site.baseurl}}/img/bonaval-logo.png"></a>
+						</div><!--end of logo -->
+					</div>
+					<div class="col-sm-6 col-md-6 col-lg-4 col-xs-6 page-links">
+				      <nav class="navbar navbar-default" role="navigation">
+				        <!-- Brand and toggle get grouped for better mobile display -->
+				        <div class="navbar-header">
+				          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
+				            <span class="sr-only">Toggle navigation</span>
+				            <span class="icon-bar"></span>
+				            <span class="icon-bar"></span>
+				            <span class="icon-bar"></span>
+				          </button>
+				        </div>
+				        <!-- Collect the nav links, forms, and other content for toggling -->
+				        <div class="collapse navbar-collapse" id="jb-navbar-collapse">
+				          <ul class="nav navbar-nav">
+							<li><a href="#">Kredit</a></li>
+							<li><a href="#">Verkauf</a></li>
+							<li><a href="#" id="login-btn">Login</a></li>
+				          </ul>
+				        </div><!-- /.navbar-collapse -->
+				      </nav>
+					</div><!-- end of page-links -->
 				</div>
 			</div>
-			<div class="row text-center" id="caption-text">
-				<p>In nur wenigen Schritten Konnen Sie Ihren Wertgegenstand Kostyenfrei<br>
-					eistellen und noch hwute Bargeld erhlaten.</p>
+		</div><!-- end of head-wrap -->
+ 
+		<div class="container banner-wrap-iner">
+			<div class="row">
+				<h1 class="text-center" id="top-heading">auxmoney</h1>
+				<h2 class="text-center">Bei uns finden Sie Top Angebote.<br></h2>
 			</div>
-		</div>
-	</div><!-- end of overlay -->
-</div><!-- end of banner-overlay -->
+	
+			<div class="row text-center">
+					<h2 class="text-center">Kostenlos und schnell.</h2>
+					<div id="form-wrapper">
+						<form method="POST" action="#">
+							<select>
+								<option value="Wertgegenstand">Mein Wertgegenstand</option>
+								<option value="Wertgegenstand">Mein Wertgegenstand</option>
+							</select>
+							<input type="submit" value="JETZT VERGLEICHEN" name="submit">
+							<div id="radio-wrap">
+								<input type="radio" name="compare" value="Verkaufsangebote" id="r1" checked>
+								<label for="r1"></label>Verkaufsangebote
+
+			  					<input type="radio" name="compare" value="Kreditangebote" id="r2"> 
+			  					<label for="r2"></label>Kreditangebote
+		  					</div>
+						</form>
+					</div>
+				</div>
+				<div class="row text-center" id="caption-text">
+					<p>In nur wenigen Schritten Konnen Sie Ihren Wertgegenstand Kostyenfrei<br>
+						eistellen und noch hwute Bargeld erhlaten.</p>
+				</div>
+			</div>
+	</div><!-- end of banner-overlay -->
 </div><!-- end of banner-wrap -->
 
 <div id="benefits-wrap">
