added map and placeholder for meta tags

--- a/landing-page-2.html
+++ b/landing-page-2.html
@@ -42,11 +42,10 @@ permalink: /landing-page-2/
 		<div class="container banner-wrap-iner">
 			<div class="row">
 				<h1 class="text-center" id="top-heading">auxmoney</h1>
-				<h2 class="text-center">Bei uns finden Sie Top Angebote.<br></h2>
+				<h2 class="text-center">Bei uns finden Sie Top Angebote.<br>Kostenlos und schnell.</h2>
 			</div>
 	
 			<div class="row text-center">
-					<h2 class="text-center">Kostenlos und schnell.</h2>
 					<div id="form-wrapper">
 						<form method="POST" action="#">
 							<select>
