--- a/landing-page.html
+++ b/landing-page.html
@@ -50,7 +50,7 @@ permalink: /landing-page/
 			<div class="row text-center">
 				<div id="form-wrapper">
 						<form method="POST" action="#">
-							<select>
+							<select onchange="javascript: myFunction();" onclick="javascript: DisablePinchZoom();">
 								<option value="Wertgegenstand">Mein Wertgegenstand</option>
 								<option value="Wertgegenstand">Mein Wertgegenstand</option>
 							</select>
