--- a/landing-page.html
+++ b/landing-page.html
@@ -368,3 +368,17 @@ permalink: /landing-page/
 		</div>
 	</div>
 </div><!-- end of footer-wrap -->
+<script>
+function DisablePinchZoom() 
+{
+    $('meta[name=viewport]').attr("content", "");
+    $('meta[name=viewport]').attr("content", "width=yourwidth, user-scalable=no");
+}
+
+function myFunction() 
+{
+    $('meta[name=viewport]').attr("content", "width=1047, user-scalable=yes");
+}
+
+
+</script>
