--- a/landing-page.html
+++ b/landing-page.html
@@ -372,12 +372,12 @@ permalink: /landing-page/
 function DisablePinchZoom() 
 {
     $('meta[name=viewport]').attr("content", "");
-    $('meta[name=viewport]').attr("content", "width=yourwidth, user-scalable=no");
+    $('meta[name=viewport]').attr("content", "width=device-width, user-scalable=no");
 }
 
 function myFunction() 
 {
-    $('meta[name=viewport]').attr("content", "width=1047, user-scalable=yes");
+    $('meta[name=viewport]').attr("content", "width=device-width, user-scalable=yes");
 }
 
 
