--- a/landing-page.html
+++ b/landing-page.html
@@ -51,8 +51,8 @@ permalink: /landing-page/
 				<div id="form-wrapper">
 						<form method="POST" action="#">
 							<select>
-								<option value="Wertgegenstand">Mein Wertgegenstand</option>
-								<option value="Wertgegenstand">Mein Wertgegenstand</option>
+								<option value="Wertgegenstand">Mein Wertgegenstand1</option>
+								<option value="Wertgegenstand">Mein Wertgegenstand2</option>
 							</select>
 							<input type="submit" value="JETZT VERGLEICHEN" name="submit">
 							<div id="radio-wrap">
