--- a/landing-page.html
+++ b/landing-page.html
@@ -270,7 +270,39 @@ permalink: /landing-page/
 	</div>
 </div><!-- end of offers-wrap -->
 
-<div id="client-testimonial">
+
+<div id="client-testimonial-desktop" class="hidden-sm hidden-xs">
+	<div class="container">
+		<div class="row">
+			<h3 class="text-center">Das sagen unsere Kunden</h3>
+		</div>
+		<div class="row">
+			  	<div class="col-md-4 testimonial-wrap text-center">
+			  		<img src="{{site.baseurl}}/img/author1.png" class="center-block img-responsive">
+			  		<p>BonaVal war sehr einfach zu benutzen. Ich habe<br>meine Angebote innerhalb weniger Stunden<br>bekommen, zusammen mit einfachen<br>Erklärungen wie ich an das Geld gelange.</p>
+			  		<span class="author-name">Gisela</span>
+			  		<span class="author-company">SCHWABING/MÜNCHEN</span>
+			  	</div>
+
+				  	<div class="col-md-4 testimonial-wrap text-center">
+				  		<img src="{{site.baseurl}}/img/author2.png" class="center-block img-responsive">
+				  		<p>“Als ein Großkunde meines Malerbetriebs seine<br>Rechnung nicht bezahlte, half mir BonaVal schnell und<br> unkompliziert Bargeld für mein Zweitauto zu erhalten.<br>Damit konnte ich meine Mitarbeiter bezahlen.”</p>
+				  		<span class="author-name">Thomas</span>
+				  		<span class="author-company">BREMEN</span>
+				  	</div>
+
+
+			  	<div class="col-md-4 testimonial-wrap text-center">
+			  		<img src="{{site.baseurl}}/img/author3.png" class="center-block img-responsive">
+			  		<p>“As a major customer of my Malerbetriebs his bill<br>is not paid, helped me Bonaval quickly and easily<br> cash for my second car to get. So that I could<br>pay my employees.”</p>
+			  		<span class="author-name">Jordan</span>
+			  		<span class="author-company">BREMEN</span>
+			  	</div>
+		</div>
+	</div>
+</div><!-- end of client-testimonial-desktop-->
+
+<div id="client-testimonial" class="visible-sm visible-xs">
 	<div class="container">
 		<div class="row">
 			<h3 class="text-center">Das sagen unsere Kunden</h3>
