--- a/landing-page-3.html
+++ b/landing-page-3.html
@@ -4,44 +4,42 @@ title: Landing Page
 metaDescription: Description goes here 
 permalink: /landing-page-3/
 ---
+<div id="head-wrap">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-3 col-xs-6">
+				<div id="logo">
+					<a href="/"><img src="/img/bonaval-logo.png"></a>
+				</div><!--end of logo -->
+			</div>
+			<div class="col-sm-6 col-md-6 col-lg-4 col-xs-6 page-links">
+		      <nav class="navbar navbar-default" role="navigation">
+		        <!-- Brand and toggle get grouped for better mobile display -->
+		        <div class="navbar-header">
+		          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
+		            <span class="sr-only">Toggle navigation</span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		          </button>
+		        </div>
+		        <!-- Collect the nav links, forms, and other content for toggling -->
+		        <div class="collapse navbar-collapse" id="jb-navbar-collapse">
+		          <ul class="nav navbar-nav">
+					<li><a href="#">Kredit</a></li>
+					<li><a href="#">Verkauf</a></li>
+					<li><a href="#" id="login-btn">Login</a></li>
+		          </ul>
+		        </div><!-- /.navbar-collapse -->
+		      </nav>
+			</div><!-- end of page-links -->
+		</div>
+	</div>
+</div><!-- end of head-wrap -->
 <div id="banner-wrap" class="lp3-banner-wrap">
 	<div id="banner-overlay">
-		<div id="head-wrap">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-3 col-xs-6">
-						<div id="logo">
-							<a href="/"><img src="{{site.baseurl}}/img/bonaval-logo.png"></a>
-						</div><!--end of logo -->
-					</div>
-					<div class="col-sm-6 col-md-6 col-lg-4 col-xs-6 page-links">
-				      <nav class="navbar navbar-default" role="navigation">
-				        <!-- Brand and toggle get grouped for better mobile display -->
-				        <div class="navbar-header">
-				          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#jb-navbar-collapse">
-				            <span class="sr-only">Toggle navigation</span>
-				            <span class="icon-bar"></span>
-				            <span class="icon-bar"></span>
-				            <span class="icon-bar"></span>
-				          </button>
-				        </div>
-				        <!-- Collect the nav links, forms, and other content for toggling -->
-				        <div class="collapse navbar-collapse" id="jb-navbar-collapse">
-				          <ul class="nav navbar-nav">
-							<li><a href="#">Kredit</a></li>
-							<li><a href="#">Verkauf</a></li>
-							<li><a href="#" id="login-btn">Login</a></li>
-				          </ul>
-				        </div><!-- /.navbar-collapse -->
-				      </nav>
-					</div><!-- end of page-links -->
-				</div>
-			</div>
-		</div><!-- end of head-wrap -->
- 
 		<div class="container banner-wrap-iner">
 			<div class="row">
-
 				<h1 class="text-center">Schnelles Bargeld?</h1>
 				<h2 class="text-center">Bei uns finden Sie Top Angebote.<br>Kostenlos und schnell.</h2>
 			</div>
@@ -69,7 +67,7 @@ permalink: /landing-page-3/
 </div><!-- end of banner-wrap -->
 
 <div id="mid-section">
-	<div class="fluid">
+	<div class="container">
 		<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy</p>
 	</div>
 
@@ -79,7 +77,7 @@ permalink: /landing-page-3/
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4 col-xs-12 footer-left-block">
-				<img src="{{site.baseurl}}/img/bonaval-logo.png">
+				<img src="/img/bonaval-logo.png">
 				<div id="reach-us">
 					<span id="email">info@bonaval.de</span>
 					<span id="number"><i class="fa fa-whatsapp" aria-hidden="true"></i>089/21 806 763</span>
