--- a/landing-page-3.html
+++ b/landing-page-3.html
@@ -9,7 +9,7 @@ permalink: /landing-page-3/
 		<div class="row">
 			<div class="col-sm-3 col-xs-6">
 				<div id="logo">
-					<a href="/"><img src="/img/bonaval-logo.png"></a>
+					<a href="/"><img src="{{site.baseurl}}/img/bonaval-logo.png"></a>
 				</div><!--end of logo -->
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-4 col-xs-6 page-links">
