--- a/landing-page-3.html
+++ b/landing-page-3.html
@@ -77,7 +77,7 @@ permalink: /landing-page-3/
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-4 col-xs-12 footer-left-block">
-				<img src="/img/bonaval-logo.png">
+				<img src="{{site.baseurl}}/img/bonaval-logo.png">
 				<div id="reach-us">
 					<span id="email">info@bonaval.de</span>
 					<span id="number"><i class="fa fa-whatsapp" aria-hidden="true"></i>089/21 806 763</span>
